--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "socket-io-chat",
   "version": "0.0.1",
+  "scripts": {
+    "start": "node index.js"
+  },
   "description": "Socket.io chat example",
   "dependencies": {
     "express": "^4.17.1"
