--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "socket-io-chat",
   "version": "0.0.1",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon ./src/index.js"
   },
   "description": "Socket.io chat example",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.0.1"
   }
 }
